--- a/assets/sass/site/_common-structure.scss
+++ b/assets/sass/site/_common-structure.scss
@@ -74,6 +74,9 @@ body {
 	z-index: 10;
 	padding-top: 40px;
 	padding-bottom: 10px;
+	@include tab {
+		padding-top: 20px;
+	}
 	@include mid {
 		padding-top: 40px;
 		padding-bottom: 0;
